<resources>
    <string name="app_name">Kill Bill</string>
    <string name="action_settings">Settings</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="add_new_bill">Add New Bill</string>
    <string name="low_storage_error">Error: Low Storage!</string>
    <string name="cant_open_gallery">Cannot open Gallery!</string>
    <string name="amt_not_detected">Bill Amount Not Detected</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="database_name">BillRecordsDatabase</string>
    <string name="bill_records">BillRecords</string>
    <string name="id">Id</string>
    <string name="date">Date</string>
    <string name="desc">Desc</string>
    <string name="delete_dialog_title">Are you sure you want to delete this bill?</string>
    <string name="confirm">Confirm</string>
    <string name="item_deleted_msg">Item Deleted Successfully!</string>
    <string name="dialog_warning">Please enter bill description</string>
    <string name="no_bills_stored">No bills stored</string>
</resources>
