<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="25dp"
              android:layout_height="wrap_content">

    <TextView
            android:text="@string/delete_dialog_title"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
                android:text="@string/confirm"
                android:id="@+id/confirm_btn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/cancel"
                style="@style/CustomButtonStyle"
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>